--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smikhalevski/react-hooks",
   "version": "1.0.0",
-  "description": "The opinionated set of general-purpose React hooks.",
+  "description": "The set of opinionated general-purpose React hooks.",
   "main": "./lib/index-cjs.js",
   "module": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -38,6 +38,7 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/jest": "^26.0.23",
     "jest": "^27.0.2",
+    "node-abort-controller": "^2.0.0",
     "react-hooks-testing-library": "^0.6.0",
     "rollup": "^2.50.5",
     "terser": "^5.7.0",
