--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "rollup": "rollup --external react --input ./lib/index.js --file ./lib/index-cjs.js --format cjs --plugin @rollup/plugin-node-resolve",
     "terser": "terser --compress --mangle toplevel --mangle-props keep_quoted --output ./lib/index-cjs.js -- ./lib/index-cjs.js",
     "clean": "rm -rf ./lib",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "docs": "typedoc ./src/main/index.ts",
+    "publish-docs": "set -ex; [ -d ./docs ]; [[ ! $(git status --porcelain) ]]; branch=$(git rev-parse --abbrev-ref HEAD); sha=$(git rev-parse --short HEAD); t=$(mktemp -d); cp -R ./docs/ $t; git checkout ghpages; ls -A | grep -wv .git | xargs rm -rf; cp -R $t/ .; git add .; git commit -m \"Updated docs ($sha)\"; git push; git checkout $branch",
+    "release-docs": "set -e; npm run clean; npm run docs; npm run publish-docs"
   },
   "repository": {
     "type": "git",
@@ -43,6 +46,7 @@
     "rollup": "^2.50.5",
     "terser": "^5.7.0",
     "ts-jest": "^27.0.2",
+    "typedoc": "^0.21.2",
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
