--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@testing-library/react-hooks": "^7.0.1",
     "@types/jest": "^26.0.23",
     "jest": "^27.0.2",
     "node-abort-controller": "^2.0.0",
-    "react-hooks-testing-library": "^0.6.0",
     "rollup": "^2.50.5",
     "terser": "^5.7.0",
     "ts-jest": "^27.0.2",
@@ -50,6 +50,6 @@
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
-    "react": ">=16.8"
+    "react": "^16.14.0"
   }
 }
