--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@smikhalevski/react-hooks",
-  "version": "1.0.0",
+  "version": "1.0.1-next.0",
   "description": "The set of opinionated general-purpose React hooks.",
   "main": "./lib/index-cjs.js",
   "module": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "sideEffects": false,
   "files": [
-    "lib",
-    "README.md"
+    "lib"
   ],
   "scripts": {
-    "build": "set -e; tsc; npm run rollup; npm run terser",
+    "build": "tsc && npm run rollup && npm run terser",
     "rollup": "rollup --external react --input ./lib/index.js --file ./lib/index-cjs.js --format cjs --plugin @rollup/plugin-node-resolve",
     "terser": "terser --compress --mangle toplevel --mangle-props keep_quoted --output ./lib/index-cjs.js -- ./lib/index-cjs.js",
-    "clean": "rm -rf ./lib",
+    "clean": "rm -rf ./lib ./docs",
     "test": "jest --detectOpenHandles",
     "docs": "typedoc ./src/main/index.ts",
-    "publish-docs": "set -ex; [ -d ./docs ]; [[ ! $(git status --porcelain) ]]; branch=$(git rev-parse --abbrev-ref HEAD); sha=$(git rev-parse --short HEAD); t=$(mktemp -d); cp -R ./docs/ $t; git checkout ghpages; ls -A | grep -wv .git | xargs rm -rf; cp -R $t/ .; git add .; git commit -m \"Updated docs ($sha)\"; git push; git checkout $branch",
-    "release-docs": "set -e; npm run clean; npm run docs; npm run publish-docs"
+    "publish-docs": "[ -d ./docs ] && [[ ! $(git status --porcelain) ]] && branch=$(git rev-parse --abbrev-ref HEAD) && sha=$(git rev-parse --short HEAD) && t=$(mktemp -d) && cp -R ./docs/ $t && git checkout ghpages && ls -A | grep -wv .git | xargs rm -rf && cp -R $t/ . && git add . && git commit -m \"Updated docs ($sha)\" && git push && git checkout $branch",
+    "release-docs": "npm run clean && npm run docs && npm run publish-docs"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,14 @@
   },
   "homepage": "https://github.com/smikhalevski/react-hooks#readme",
   "jest": {
-    "preset": "ts-jest"
+    "preset": "ts-jest",
+    "globals": {
+      "ts-jest": {
+        "diagnostics": {
+          "ignoreCodes": [151001]
+        }
+      }
+    }
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
