--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@testing-library/react-hooks": "^7.0.1",
     "@types/jest": "^27.0.3",
+    "@types/react": "^17.0.37",
     "jest": "^27.0.2",
     "node-abort-controller": "^2.0.0",
+    "react-test-renderer": "^17.0.2",
     "rollup": "^2.50.5",
     "terser": "^5.7.0",
     "ts-jest": "^27.0.2",
@@ -59,6 +61,6 @@
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
-    "react": "^16.14.0"
+    "react": ">=16.14.0"
   }
 }
