--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smikhalevski/react-hooks",
   "version": "3.0.0-next.0",
-  "description": "The set of opinionated general-purpose React hooks.",
+  "description": "The set of general-purpose React hooks.",
   "main": "./lib/index-cjs.js",
   "module": "./lib/index.js",
   "types": "./lib/index.d.ts",
