--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smikhalevski/react-hooks",
-  "version": "2.0.0",
-  "description": "The set of opinionated general-purpose React hooks.",
+  "version": "3.0.0-next.0",
+  "description": "The set of general-purpose React hooks.",
   "main": "./lib/index-cjs.js",
   "module": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "tsc && npm run rollup && npm run terser",
     "rollup": "rollup --external react --input ./lib/index.js --file ./lib/index-cjs.js --format cjs --plugin @rollup/plugin-node-resolve",
-    "terser": "terser --compress --mangle toplevel --mangle-props keep_quoted --output ./lib/index-cjs.js -- ./lib/index-cjs.js",
+    "terser": "for file in ./lib/*.js; do terser --compress --mangle --mangle-props regex=/^_/ --output $file -- $file; done || exit 1",
     "clean": "rm -rf ./lib ./docs",
     "test": "jest --detectOpenHandles",
     "docs": "typedoc ./src/main/index.ts",
@@ -36,6 +36,9 @@
   "homepage": "https://github.com/smikhalevski/react-hooks#readme",
   "jest": {
     "preset": "ts-jest",
+    "setupFiles": [
+      "./src/test/test-init.ts"
+    ],
     "globals": {
       "ts-jest": {
         "diagnostics": {
@@ -49,16 +52,19 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@testing-library/react-hooks": "^7.0.1",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.3",
+    "@types/react": "^17.0.37",
     "jest": "^27.0.2",
     "node-abort-controller": "^2.0.0",
+    "react-test-renderer": "^17.0.2",
     "rollup": "^2.50.5",
+    "sleep-promise": "^9.1.0",
     "terser": "^5.7.0",
     "ts-jest": "^27.0.2",
     "typedoc": "^0.21.2",
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
-    "react": "^16.14.0"
+    "react": ">=16.14.0"
   }
 }
