--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smikhalevski/react-hooks",
-  "version": "3.0.0",
+  "version": "3.1.0-next.0",
   "description": "The set of general-purpose React hooks.",
   "main": "./lib/index-cjs.js",
   "module": "./lib/index.js",
