--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "node-abort-controller": "^3.0.1",
     "react-test-renderer": "^17.0.2",
     "rollup": "^2.66.1",
-    "sleep-promise": "^9.1.0",
     "terser": "^5.10.0",
     "ts-jest": "^27.1.3",
     "typedoc": "^0.22.11",
@@ -68,6 +67,7 @@
     "react": ">=16.14.0"
   },
   "dependencies": {
-    "@smikhalevski/event-bus": "^1.0.0"
+    "@smikhalevski/event-bus": "^1.0.0",
+    "parallel-universe": "^1.0.0"
   }
 }
