--- a/package.json
+++ b/package.json
@@ -50,24 +50,24 @@
     }
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@testing-library/react-hooks": "^7.0.1",
-    "@types/jest": "^27.0.3",
-    "@types/react": "^17.0.37",
-    "jest": "^27.0.2",
-    "node-abort-controller": "^2.0.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "jest": "^27.4.7",
+    "node-abort-controller": "^3.0.1",
     "react-test-renderer": "^17.0.2",
-    "rollup": "^2.50.5",
-    "sleep-promise": "^9.1.0",
-    "terser": "^5.7.0",
-    "ts-jest": "^27.0.2",
-    "typedoc": "^0.21.2",
-    "typescript": "^4.3.2"
+    "rollup": "^2.66.1",
+    "terser": "^5.10.0",
+    "ts-jest": "^27.1.3",
+    "typedoc": "^0.22.11",
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "react": ">=16.14.0"
   },
   "dependencies": {
-    "@smikhalevski/event-bus": "^1.0.0"
+    "@smikhalevski/event-bus": "^1.0.0",
+    "parallel-universe": "^1.0.0"
   }
 }
