--- a/package.json
+++ b/package.json
@@ -35,25 +35,25 @@
   },
   "homepage": "https://github.com/smikhalevski/react-hookers#readme",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
-    "jest": "^27.4.7",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@testing-library/react": "^13.0.0",
+    "@types/jest": "^28.1.3",
+    "@types/react": "^18.0.14",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "prettier": "^2.7.1",
-    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.66.1",
-    "terser": "^5.10.0",
-    "ts-jest": "^27.1.3",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5"
+    "rollup": "^2.75.7",
+    "terser": "^5.14.1",
+    "ts-jest": "^28.0.5",
+    "typedoc": "^0.23.5",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "react": ">=16.14.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "@smikhalevski/event-bus": "^1.0.0",
-    "parallel-universe": "^1.0.0"
+    "parallel-universe": "^1.1.2"
   }
 }
