--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "declaration": true,
     "moduleResolution": "Node",
+    "esModuleInterop": true,
     "isolatedModules": true,
     "noUnusedLocals": true,
     "strict": true,
-    "target": "ES5",
+    "target": "ES6",
     "module": "ES6",
     "outDir": "./lib"
   },
