--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   },
   "homepage": "https://github.com/smikhalevski/react-hookers#readme",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^12.1.0",
-    "@swc/core": "^1.7.35",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "@swc/core": "^1.7.36",
     "@swc/jest": "^0.2.36",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
@@ -47,13 +47,14 @@
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "rollup": "^4.24.0",
-    "tslib": "^2.7.0",
-    "typedoc": "^0.26.8",
+    "tslib": "^2.8.0",
+    "typedoc": "^0.26.10",
     "typedoc-custom-css": "github:smikhalevski/typedoc-custom-css#master",
+    "typedoc-plugin-mdn-links": "^3.3.4",
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^18.0.0"
   },
   "dependencies": {
     "parallel-universe": "^6.1.1"
