--- a/package.json
+++ b/package.json
@@ -35,25 +35,28 @@
   },
   "homepage": "https://github.com/smikhalevski/react-hookers#readme",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.11",
-    "@types/react": "^18.2.42",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "@swc/core": "^1.7.36",
+    "@swc/jest": "^0.2.36",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.1.0",
-    "rimraf": "^5.0.5",
-    "rollup": "^4.7.0",
-    "ts-jest": "^29.1.1",
-    "tslib": "^2.6.2",
-    "typedoc": "^0.25.4",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.24.0",
+    "tslib": "^2.8.0",
+    "typedoc": "^0.26.10",
     "typedoc-custom-css": "github:smikhalevski/typedoc-custom-css#master",
-    "typescript": "^5.3.3"
+    "typedoc-plugin-mdn-links": "^3.3.4",
+    "typescript": "^5.6.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^18.0.0"
   },
   "dependencies": {
-    "parallel-universe": "^6.0.0"
+    "parallel-universe": "^6.1.1"
   }
 }
