--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,10 @@
     "isolatedModules": true,
     "noUnusedLocals": true,
     "strict": true,
+    "jsx": "react",
     "target": "ES6",
     "module": "ES6",
     "outDir": "./lib"
   },
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
