--- a/package.json
+++ b/package.json
@@ -36,25 +36,26 @@
   "homepage": "https://github.com/smikhalevski/react-hookers#readme",
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.1",
-    "@swc/core": "^1.7.36",
-    "@swc/jest": "^0.2.36",
-    "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.13",
+    "@swc/core": "^1.11.7",
+    "@swc/jest": "^0.2.37",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "rollup": "^4.24.0",
-    "tslib": "^2.8.0",
+    "rollup": "^4.34.9",
+    "tslib": "^2.8.1",
     "typedoc": "^0.26.10",
     "typedoc-custom-css": "github:smikhalevski/typedoc-custom-css#master",
     "typedoc-plugin-mdn-links": "^3.3.4",
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "parallel-universe": "^6.1.1"
