--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./index.d.ts",
@@ -15,9 +16,9 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "rollup --config && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete scripts devDependencies",
+    "build": "tsc --project tsconfig.build.json && node rewrite.mjs lib && tsc --project tsconfig.build.json --module CommonJS && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete type scripts devDependencies",
     "clean": "rimraf lib docs coverage",
-    "test": "jest",
+    "test": "vitest run",
     "docs": "typedoc"
   },
   "repository": {
@@ -35,23 +36,17 @@
   },
   "homepage": "https://github.com/smikhalevski/react-hookers#readme",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^12.1.1",
-    "@swc/core": "^1.11.7",
-    "@swc/jest": "^0.2.37",
-    "@testing-library/react": "^16.2.0",
-    "@types/jest": "^29.5.14",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "rollup": "^4.34.9",
     "tslib": "^2.8.1",
-    "typedoc": "^0.26.10",
-    "typedoc-custom-css": "github:smikhalevski/typedoc-custom-css#master",
-    "typedoc-plugin-mdn-links": "^3.3.4",
-    "typescript": "^5.6.3"
+    "typedoc": "^0.28.5",
+    "typedoc-plugin-mdn-links": "^5.0.2",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.4"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
