--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "moduleResolution": "Node",
     "esModuleInterop": true,
     "isolatedModules": true,
-    "noUnusedLocals": true,
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "skipLibCheck": true,
+    "target": "ES2020",
+    "module": "NodeNext",
     "jsx": "react",
-    "target": "ES6",
-    "module": "ES6",
+    "lib": ["DOM", "ES2020"],
     "outDir": "./lib"
   },
   "include": ["./src/**/*"]
