--- a/package.json
+++ b/package.json
@@ -2,23 +2,22 @@
   "name": "react-hookers",
   "version": "6.3.0",
   "description": "The set of general-purpose React hooks.",
-  "main": "./index.js",
-  "module": "./index.mjs",
-  "types": "./index.d.ts",
   "type": "module",
+  "main": "./index.js",
+  "types": "./index.d.ts",
+  "engines": {
+    "node": ">=24.3.0"
+  },
   "exports": {
-    ".": {
-      "types": "./index.d.ts",
-      "import": "./index.mjs",
-      "require": "./index.js"
-    },
+    ".": "./index.js",
     "./package.json": "./package.json"
   },
   "sideEffects": false,
   "scripts": {
-    "build": "tsc --project tsconfig.build.json && node rewrite.mjs lib && tsc --project tsconfig.build.json --module CommonJS && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete type scripts devDependencies",
+    "build": "tsc --project tsconfig.build.json && cp package.json README.md LICENSE.txt lib/ && cd lib && npm pkg delete engines scripts devDependencies",
     "clean": "rimraf lib docs coverage",
-    "test": "vitest run",
+    "test": "TZ=UTC vitest run",
+    "perf": "toofast",
     "docs": "typedoc"
   },
   "repository": {
@@ -37,20 +36,20 @@
   "homepage": "https://github.com/smikhalevski/react-hookers#readme",
   "devDependencies": {
     "@testing-library/react": "^16.3.0",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "jsdom": "^26.1.0",
-    "prettier": "^3.5.3",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "jsdom": "^27.0.1",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "tslib": "^2.8.1",
-    "typedoc": "^0.28.5",
-    "typedoc-plugin-mdn-links": "^5.0.2",
-    "typescript": "^5.8.3",
-    "vitest": "^3.1.4"
+    "typedoc": "^0.28.14",
+    "typedoc-plugin-mdn-links": "^5.0.10",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.5"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "dependencies": {
     "parallel-universe": "^6.1.2"
